--- a/CV.html
+++ b/CV.html
@@ -39,6 +39,10 @@
           <li>JavaScript</li>
           <li>Communication</li>
           <li>Research</li>
+          <li>Technical Support</li>
+          <li>Customer Engagement</li>
+          <li>Problem-Solving</li>
+          <li>Organizational Skills</li>
         </ul>
       </section>
       <section id="experience">
