--- a/CV.html
+++ b/CV.html
@@ -32,63 +32,110 @@
         </p>
       </section>
       <section id="skills">
-        <h2>Skills</h2>
-        <ul>
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          <li>Communication</li>
-          <li>Research</li>
-          <li>Technical Support</li>
-          <li>Customer Engagement</li>
-          <li>Problem-Solving</li>
-          <li>Organizational Skills</li>
-        </ul>
+        <div class="container">
+          <h2>Skills</h2>
+          <div class="skill">
+            <div class="skill-label">HTML</div>
+            <div class="skill-bar">
+              <div class="skill-fill html-fill"></div>
+            </div>
+          </div>
+          <div class="skill">
+            <div class="skill-label">CSS</div>
+            <div class="skill-bar">
+              <div class="skill-fill css-fill"></div>
+            </div>
+          </div>
+          <div class="skill">
+            <div class="skill-label">JavaScript</div>
+            <div class="skill-bar">
+              <div class="skill-fill javascript-fill"></div>
+            </div>
+          </div>
+          <div class="skill">
+            <div class="skill-label">Figma</div>
+            <div class="skill-bar">
+              <div class="skill-fill figma-fill"></div>
+            </div>
+          </div>
+          <div class="skill">
+            <div class="skill-label">Communication</div>
+            <div class="skill-bar">
+              <div class="skill-fill communication-fill"></div>
+            </div>
+          </div>
+          <div class="skill">
+            <div class="skill-label">Research</div>
+            <div class="skill-bar">
+              <div class="skill-fill research-fill"></div>
+            </div>
+          </div>
+          <div class="skill">
+            <div class="skill-label">Technical Support</div>
+            <div class="skill-bar">
+              <div class="skill-fill technical-fill"></div>
+            </div>
+          </div>
+          <div class="skill">
+            <div class="skill-label">Customer Engagement</div>
+            <div class="skill-bar">
+              <div class="skill-fill customer-fill"></div>
+            </div>
+          </div>
+          <div class="skill">
+            <div class="skill-label">Problem-Solving</div>
+            <div class="skill-bar">
+              <div class="skill-fill problem-fill"></div>
+            </div>
+          </div>
+          <div class="skill">
+            <div class="skill-label">Organisational Skills</div>
+            <div class="skill-bar">
+              <div class="skill-fill organisational-fill"></div>
+            </div>
+          </div>
+        </div>
       </section>
       <section id="experience">
         <h2>Experience</h2>
         <div class="job">
           <h3>Customer Service Administrator</h3>
-          <p>Accenture | April 2023 – September 2024</p>
-          <p>
+          <p class="job-name">Accenture | April 2023 – September 2024</p>
+          <p class="job-role">
             In my previous role, I was responsible for resolving technical
-            issues related to broadband, TV, and<br />
-            landline services. By leveraging my expertise, I achieved a
-            remarkable 90% first-call resolution rate,<br />
-            which significantly boosted customer satisfaction by 15%. I
-            consistently designed tailored solutions to address<br />
+            issues related to broadband, TV, and landline services. By
+            leveraging my expertise, I achieved a remarkable 90% first-call
+            resolution rate, which significantly boosted customer satisfaction
+            by 15%. I consistently designed tailored solutions to address
             specific customer needs, leading to a 25% improvement in customer
-            retention rates and receiving positive feedback<br />
-            from 85% of surveyed clients. Furthermore, my effective
-            troubleshooting and clear communication efforts successfully<br />
-            reduced repeat service calls by 20%, showcasing my ability to
-            enhance overall service efficiency.
+            retention rates and receiving positive feedback from 85% of surveyed
+            clients. Furthermore, my effective troubleshooting and clear
+            communication efforts successfully reduced repeat service calls by
+            20%, showcasing my ability to enhance overall service efficiency.
           </p>
         </div>
         <div class="job">
           <h3>Administrative Officer</h3>
-          <p>
+          <p class="job-name">
             National Oil Spill Detection and Response Agency | December 2019 –
             November 2021
           </p>
-          <p>
+          <p class="job-role">
             In my previous role, I facilitated communication across various
-            teams, ensuring that stakeholders were<br />
-            consistently informed about project milestones and deadlines. I took
-            on the responsibility of mentoring and supervising<br />
-            a group of 10 new employees, which significantly improved team
-            efficiency through targeted training sessions. This led to a<br />
-            notable increase in overall team productivity. Additionally, I
-            created detailed reports and analyses that played a crucial role
-            in<br />
-            guiding decision-making for senior leadership, enhancing the
-            strategic direction of the projects.
+            teams, ensuring that stakeholders were consistently informed about
+            project milestones and deadlines. I took on the responsibility of
+            mentoring and supervising a group of 10 new employees, which
+            significantly improved team efficiency through targeted training
+            sessions. This led to a notable increase in overall team
+            productivity. Additionally, I created detailed reports and analyses
+            that played a crucial role in guiding decision-making for senior
+            leadership, enhancing the strategic direction of the projects.
           </p>
         </div>
         <div class="job">
           <h3>Volunteer</h3>
-          <p>The British Red Cross | January – Apirl 2023</p>
-          <p>
+          <p class="job-name">The British Red Cross | January – Apirl 2023</p>
+          <p class="job-role">
             In my previous role, I actively engaged with customers to promote
             the charity’s mission and fundraising<br />
             efforts, significantly increasing awareness and support. I assisted
@@ -114,10 +161,15 @@
         <h2>Contact</h2>
         <p>
           Email:
-          <a href="mailto:oviealiboh9@gmail.com">oviealiboh@gmail.com</a>
+          <a href="mailto:oviealiboh9@gmail.com">oviealiboh9@gmail.com</a>
         </p>
         <p>Phone: +447746631463</p>
-        <p>Portfolio: <a href="#">yourwebsite.com</a></p>
+        <p>
+          Portfolio:
+          <a href="https://portfoliovie.netlify.app/" target="_blank"
+            >Portfolio</a
+          >
+        </p>
       </section>
     </main>
     <footer>
